--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="D:/tools/lombok.jar"/>
+	<classpathentry kind="lib" path="C:/jar/lombok.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
